--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,9 @@
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
-    "vite": "^3.2.3"
+    "eslint": "^8.27.0",
+    "eslint-config-react-app": "^7.0.1",
+    "vite": "^3.2.3",
+    "vite-plugin-eslint": "^1.8.1"
   }
 }
