--- a/front-end/package.json
+++ b/front-end/package.json
@@ -1,47 +1,32 @@
 {
-  "name": "rezoqvik-app",
-  "version": "0.1.0",
+  "name": "frontend",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.1.2",
-    "firebase": "^9.10.0",
-    "mapbox-gl": "^2.10.0",
+    "axios": "^1.1.3",
+    "mapbox-gl": "^2.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0",
-    "react-modal": "^3.16.1",
+    "react-icons": "^4.6.0",
     "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^6.4.1",
-    "react-scripts": "5.0.1",
-    "react-select": "^5.5.2",
-    "react-select-country-list": "^2.2.3",
-    "web-vitals": "^2.1.4"
+    "react-router-dom": "^6.4.3",
+    "react-scripts": "^5.0.1",
+    "react-select": "^5.6.1",
+    "react-select-country-list": "^2.2.3"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "@types/react": "^18.0.24",
+    "@types/react-dom": "^18.0.8",
+    "@vitejs/plugin-react": "^2.2.0",
+    "eslint": "^8.27.0",
+    "eslint-config-react-app": "^7.0.1",
+    "vite": "^3.2.3",
+    "vite-plugin-eslint": "^1.8.1"
   }
 }
