--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.16.1",
     "axios": "^1.1.3",
     "mapbox-gl": "^2.11.0",
     "react": "^18.2.0",
