--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-toastify": "^9.1.1"
   },
   "devDependencies": {
+    "@tanstack/react-query-devtools": "^4.20.4",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
