--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^1.9.1",
     "@tanstack/react-query": "^4.16.1",
     "axios": "^1.2.1",
+    "formik": "^2.2.9",
     "mapbox-gl": "^2.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
